fixed navbar shifting issue

--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,9 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  margin-left: -5px;
-  margin-right: -5px;
   position: relative;
 }
+
 
   html, body {
     width: 100%;
@@ -16,12 +15,14 @@
     color: #f2f2f2;
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    scrollbar-gutter: stable;
   }
   
   #root {
     height: 100%;
     width: 100%;
     text-align: center;
+    
   }
 
   
