--- a/src/Components/CountryPage.css
+++ b/src/Components/CountryPage.css
@@ -15,7 +15,7 @@
         width: 100%;
         background-color: #202C36;
         min-height: 100vh;
-        padding: 100px 200px;
+        padding: 30px 200px;
         box-sizing: border-box;
         flex: 1;
       }
