--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,7 +1,6 @@
 .Navbar {
-    position: fixed;
+    position: sticky;
     top: 0;
-    left: 0;
     width: 100%;
     z-index: 100;
     background-color: #2B3844;
@@ -11,14 +10,14 @@
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
-    padding: 0px 200px;
+    padding: 0px 210px;
 }
 
 .light-dark {
     border: none;
     display: flex;
     align-items: center;
-    padding: 10px 20px;
+    padding: 10px 10px;
     background-color: #2b3844;
     color: white;
     border-radius: 4px;
